--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=spring-boot-data-cassandra-invoice
+spring.cassandra.keyspace-name=invoice
+spring.cassandra.contact-points=localhost
+spring.cassandra.port=9042
+spring.cassandra.schema-action=NONE
+springdoc.api-docs.path=/v3/api-doc
+springdoc.swagger-ui.path=/swagger-ui
+application-description='@project.description@'
+application-version='@project.version@'
